tests/build/widget/name_conflict1.stderr
error[E0255]: the name `foo` is defined multiple times
 --> $DIR/name_conflict1.rs:9:1
  |
7 | pub use crate::foo;
  |         ---------- previous import of the module `foo` here
8 |
9 | #[widget($crate::foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^ `foo` redefined here
  |
  = note: `foo` must be defined only once in the type namespace of this module
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can use `as` to change the binding name of the import
  |
7 | pub use crate::foo as other_foo;
  |         ^^^^^^^^^^^^^^^^^^^^^^^
